# pharma_billing

./: .gitignore  MANIFEST.in  README.md  __init__.py  hooks.py  pyproject.toml  setup.py
config/: __init__.py  desktop.py
pharma_billing/: MANIFEST.in  __init__.py  hook.py  pyproject.toml
pharma_billing/doctype/: __init__.py
pharma_billing/report/: __init__.py
public/: __init__.py
templates/: __init__.py
